    * Increased the HP of the Sentinel from 56 to 68.
    * Decreased cost of the Mudcrawler from 9 to 5.
    * Decreased the HP of the Shadow from 26 to 24.
    * Increased the HP of the Goblin Rouser from 26 to 31.
    * Increased the melee damage of the Goblin Rouser from 5-3 to 6-3.

  * Multiplayer
    * Maps
      * New maps: The Manzivan Traps
      * Revised maps: Blitz

  * Map editor
    * Maps can now be opened directly from a scenario file and saved back to it.

  * Language and translations
    * Updated translations: German, Italian.
    * Fixed spelling mistakes in the default en_US language.

Detailed changelog and internal changes:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
 * editor
   * allow maps to be loaded from scenario files and written back to them
 * graphics
   * fixed terrain selection probabilites (patch #617)
   * stoned units do not use a separate cache
   * no more "darkened" cache. we now overlay terrain/darken.png
   * star shaped "ellipses" for leaders and hero units
   * item graphic improvements including animate-able campfire.
   * terrain
     * added peaks to the impassable mountains
   * unit art
     * added a recruit animation for Skeleton
   * fix gryphon not being in the center of their hex
   * Fixed incorrect WML in some units causing female variations to use male
 * language and i18n:
   * new/updated man pages:
   * updated translations: German, Italian
   * fixed huge list of spelling mistakes in the en_US version
 * multiplayer
   * game management
     * fixed controler change not sended to all client (bug #8138)
     * client now tells the server if a game ended in victory or defeat