@@ -36,6 +36,9 @@ Concise list of player-visible changes:
     * Maps
       * New maps: The Manzivan Traps
       * Revised maps: Blitz
+    * UI
+      * replace "Downloading next level..." by "Receiving data..."
+        when scenario don't have next_scenario
 
   * Map editor
     * Maps can now be opened directly from a scenario file and saved back to it.
